--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,61 @@
 body {
-  background-color: #E1FFB1;
-  /* margin:0 sticks every element upwards */
-  /* margin: 0; */
+  background-color: #e1ffb1;
   text-align: center;
-  /* text-align :center will center everytings in the center who are independent of width  */
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   margin: 0;
 }
-p{
-    line-height: 2;
+p {
+  line-height: 2;
 }
-span{
+span {
   font-weight: bold;
 }
 h1 {
-  /* margin auto always keeps the ele in the center either vertically or horizontally
-  margin: 0 auto 0 auto;
-*/
-color: #7FB77E;
-  font-family: 'Sacramento', cursive;
-  /* personal recommendation from angela use rem */
+  color: #7fb77e;
+  font-family: "Sacramento", cursive;
   font-size: 5.625rem;
   /* 100%=16px  */
-
   line-height: 2;
   margin: 50px auto 0 auto;
 }
-h2{
-  color:#7FB77E;
-  font-family: 'Montserrat Alternates', sans-serif;
+h2 {
+  color: #7fb77e;
+  font-family: "Montserrat Alternates", sans-serif;
   font-weight: normal;
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
-h3,a {
-
-  color: #9EB23B;
-  font-family: 'Montserrat Alternates', sans-serif;
+h3,
+a {
+  color: #9eb23b;
+  font-family: "Montserrat Alternates", sans-serif;
 }
-hr{
+hr {
   border: dotted white 3px;
-border-bottom: none;
+  border-bottom: none;
   width: 2%;
-  margin:75px auto 75px auto;
-  /* background-color: white; */
-
+  margin: 75px auto 75px auto;
 }
-button{
-  background-color: #C7F2A4;
-  /* background-color: #7FB77E; */
+button {
+  background-color: #c7f2a4;
   border-radius: 10px;
   height: 2.5rem;
   width: 10%;
 
- margin: 2.5rem auto 2.5rem auto;
-cursor: pointer;
-border-style: none;
-  font-family: 'Montserrat Alternates', sans-serif;
+  margin: 2.5rem auto 2.5rem auto;
+  cursor: pointer;
+  border-style: none;
+  font-family: "Montserrat Alternates", sans-serif;
   text-decoration: none;
-
 }
-button:hover{
+button:hover {
   width: 15rem;
   height: 5rem;
   color: black;
 }
 
 .top-container {
-  /* background-color: #C7F2A4; */
-  /* height: 100px; */
-  background-color: #E1FFB1;
+  background-color: #e1ffb1;
   position: relative;
   padding-top: 100px;
 }
@@ -87,59 +73,68 @@ button:hover{
 }
 
 .middle-container {
-  background-color: #B6E388;
+  background-color: #b6e388;
 }
-.intro{
+.introduction {
+  width: 45%;
+  margin: auto;
+  color: #7fb77e;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: normal;
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+.intro {
   width: 25%;
   margin: auto;
 }
 
-
- .bottom-container {
-   height: 5.25rem;
-  background-color: #FCFFB2;
+.bottom-container {
+  height: 5.25rem;
+  background-color: #fcffb2;
   padding: 50px 0 20px;
 }
-.footer-link{
-  /* margin-top: 2.5rem; */
+.footer-link {
   padding: 0 2rem 0 2rem;
   text-decoration: none;
-  /* margin: 2.5rem auto 2.5rem auto; */
- }
- .footer-link:hover{
-   /* color: #FCA652; */
-   color: #F1A661;
- }
- .copy-right{
-   font-size: 0.75rem;
-   padding: 20px 0px;
- }
-.ecommerce{
+}
+.footer-link:hover {
+  color: #f1a661;
+}
+.copy-right {
+  font-size: 0.75rem;
+  padding: 20px 0px;
+}
+.ecommerce {
   border-radius: 50%;
   width: 25%;
   float: left;
   margin-right: 30px;
 }
-.java{
+.java {
   border-radius: 50%;
   width: 25%;
   float: right;
   margin-left: 30px;
 }
-.skill-row{
-
-  margin:100px auto 100px auto;
+.skill-row {
+  margin: 100px auto 100px auto;
   text-align: left;
-  width: 60%;
+  width: 45%;
 }
-.contact-message{
-margin: 40px auto 40px auto;
+.contact-message {
+  margin: 40px auto 40px auto;
   width: 23%;
 }
 
-.btn{
+.btn {
   text-decoration: none;
-
+}
+ul {
+  list-style-type: none;
+}
+li {
+  margin: 8px;
 }
 /* .web-desc{
   clear:left;
